--- a/html/base.html
+++ b/html/base.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-light bg-light">
         <a class="navbar-brand" href="#">
           <img src="https://avx-build.s3.eu-central-1.amazonaws.com/logo-64.png" width="32" height="32" class="d-inline-block align-top" alt="">
-          Aviatrix Build Class
+          Aviatrix Build
         </a>
     </nav>
       
