--- a/html/base.html
+++ b/html/base.html
@@ -25,9 +25,9 @@
 <center>
     <table>
         <tr>
-        <td><form action="index.py"><input type="hidden" name="module" value="viewdb"><input class="btn btn-outline-dark" type="submit" value="View Data"></form></td>
+        <td><form action="index.py"><input type="hidden"><input class="btn btn-outline-dark" type="submit" value="Refresh Page"></form></td>
+        <td><form action="index.py"><input type="hidden" name="module" value="viewdb"><input class="btn btn-outline-dark" type="submit" value="Query Database"></form></td>
         <td><form action="index.py"><input type="hidden" name="module" value="enterdb"><input class="btn btn-outline-dark" type="submit" value="Enter Data"></form></td>
-        <td><form action="index.py"><input type="hidden"><input class="btn btn-outline-dark" type="submit" value="Clear Page"></form></td>
         </tr>
     </table>
 
