update button text

--- a/html/base.html
+++ b/html/base.html
@@ -50,9 +50,9 @@
 <center>
     <table>
         <tr>
-        <td><form action="index.py"><input type="hidden"><input class="btn btn-outline-dark" type="submit" value="Refresh Page"></form></td>
-        <td><form action="index.py"><input type="hidden" name="module" value="viewdb"><input class="btn btn-outline-dark" type="submit" value="Wall of Fame!"></form></td>
-        <td><form action="index.py"><input type="hidden" name="module" value="enterdb"><input class="btn btn-outline-dark" type="submit" value="Enter Data"></form></td>
+        <td><form action="index.py"><input type="hidden"><input class="btn btn-outline-dark" type="submit" value="Refresh"></form></td>
+        <td><form action="index.py"><input type="hidden" name="module" value="viewdb"><input class="btn btn-outline-dark" type="submit" value="Wall of Fame"></form></td>
+        <td><form action="index.py"><input type="hidden" name="module" value="enterdb"><input class="btn btn-outline-dark" type="submit" value="Sign In"></form></td>
         </tr>
     </table>
 
